lang/tests/compile_fail/sweep_before_close_ordering.stderr
error: `sweep(...)` must appear before `close(...)` — wrong ordering is always a bug
  --> tests/compile_fail/sweep_before_close_ordering.rs:15:5
   |
15 | /     #[account(mut,
16 | |         close(dest = receiver, authority = receiver),
17 | |         sweep(receiver = receiver, mint = mint, authority = receiver)
18 | |     )]
19 | |     pub vault: Account<Token>,
   | |_____________________________^

error[E0432]: unresolved import `quasar_spl`
 --> tests/compile_fail/sweep_before_close_ordering.rs:3:5
  |
3 | use quasar_spl::*;
  |     ^^^^^^^^^^ use of unresolved module or unlinked crate `quasar_spl`
  |
  = help: if you wanted to use a crate named `quasar_spl`, use `cargo add quasar_spl` to add it to your `Cargo.toml`
